--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,7 @@
+/* KRUNIKI CSS Entry Point */
 
+@import url("core/00_tokens.css");
+@import url("core/01_base.css");
+@import url("components/cards.css");
+@import url("features/hamburger.dropdown.css");
+@import url("fixes/99_hotfix.css");
