--- a/assets/css2/app.css
+++ b/assets/css2/app.css
@@ -2,10 +2,11 @@
 @import url("./core/01_tokens.css");
 @import url("./core/02_base.css");
 @import url("./core/03_typography.css");
-/* @import url("./core/04_layout.css"); */
+@import url("./core/04_layout.css");
 
 /* components */
-@import url("./components/nav.css");
+/*@import url("./components/nav.css"); */
+
 @import url("./components/hamburger.css");
 @import url("./components/buttons.css");
 @import url("./components/cards.css");
