--- a/assets/css2/app.css
+++ b/assets/css2/app.css
@@ -7,11 +7,11 @@
 /* components */
 @import url("./components/nav.css");
 @import url("./components/hamburger.css");
-
+@import url("./components/buttons.css");
 @import url("./components/cards.css");
 
 /* pages */
 @import url("./pages/index2.css");
 
 /* fixes (LAST) */
-@import url("./fixes/99_hotfix.css");
+/* @import url("./fixes/99_hotfix.css"); */
