--- a/assets/css2/app.css
+++ b/assets/css2/app.css
@@ -1,6 +1,6 @@
 /* core */
 @import url("./core/01_tokens.css");
-/* @import url("./core/02_base.css"); */
+@import url("./core/02_base.css");
 @import url("./core/03_typography.css"); 
 @import url("./core/04_layout.css");
 
