--- a/assets/css2/app.css
+++ b/assets/css2/app.css
@@ -10,6 +10,13 @@
 @import url("./components/buttons.css");
 @import url("./components/cards.css");
 
+/* components */
+@import url("./components/nav.css");
+@import url("./components/hamburger.css");
+@import url("./components/buttons.css");
+@import url("./components/cards.css");
+@import url("./components/social.css");
+
 /* pages */
 @import url("./pages/index2.css");
 
